results/SpecGenBench/4-shot/log-LargestPerimeter-2023_11_05_03_50_29.txt
import java.util.Arrays;

class LargestPerimeter {
    //@ requires A != null;
    //@ ensures \result >= 0;
    public int largestPerimeter(int[] A) {
        Arrays.sort(A);
        //@ maintaining (\forall int i; 0 <= i && i < A.length - 2; A[i] <= A[i + 1]);
        //@ maintaining (\forall int i; A.length - 1 <= i && i < A.length; A[i] == \old(A[i]));
        //@ decreases A.length - 2 - i;
        for (int i = A.length - 1; i >= 2; --i) {
            if (A[i - 2] + A[i - 1] > A[i]) {
                return A[i - 2] + A[i - 1] + A[i];
            }
        }
        return 0;
    }
}
/home/max/Documents/JMLGPT/tmp/LargestPerimeter.java:8: error: variable i is already defined in method largestPerimeter(int[])
        //@ maintaining (\forall int i; 0 <= i && i < A.length - 2; A[i] <= A[i + 1]);
                                     ^
/home/max/Documents/JMLGPT/tmp/LargestPerimeter.java:9: error: variable i is already defined in method largestPerimeter(int[])
        //@ maintaining (\forall int i; A.length - 1 <= i && i < A.length; A[i] == \old(A[i]));
                                     ^
2 errors

